# caminator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  yolotest.py  Технічне завдання.docx
object_tracking_pipeline/: boxes_converters.py  drawing_results.py
object_tracking_pipeline/detection_models/onnx_model/: onnx_prediction.py  onnx_test.py
object_tracking_pipeline/detection_models/yolo_model/: yolo_prediction.py
object_tracking_pipeline/tracking/: my_tracker.py  test.py
object_tracking_pipeline/tracking/byte_track/: byte_tracker.py  main.py
object_tracking_pipeline/tracking/sort_algorithm/: sort.py
onnx_model/: onnx_prediction.py  onnx_test.py
ui/: camera_control.ui  control_panel.ui  main_window.ui  object_list.ui
ui_to_py/: camera_control.py  control_panel.py  main_window.py  object_list.py  ui_to_py_script.py
usefull_classes/: observer.py
weights/: onnx_prediction.py
widgets/: camera_control.py  camera_stream.py  control_panel.py  main_window.py  object_list.py
yolo_model/: yolo_prediction.py
