[tool.poetry]
name = "caminator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.9"
opencv-python = "^4.8.0.76"
openvino-dev = "^2023.0.1"
openvino = "^2023.0.1"
ultralytics = "^8.0.167"
filterpy = "1.4.5"
scikit-image = "0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

